Fix overflowing text.

--- a/apps/dotcom/client/src/tla/components/dialogs/TlaInviteDialog.module.css
+++ b/apps/dotcom/client/src/tla/components/dialogs/TlaInviteDialog.module.css
@@ -24,7 +24,9 @@
 	font-size: 12px;
 	text-align: center;
 	padding-right: var(--tl-space-4);
-	height: 20px;
+	min-height: 20px;
+	word-break: break-word;
+	overflow-wrap: break-word;
 }
 
 .acceptButton {
